<resources>

    <!--strings use to name activities and views-->
    <string name="app_name">Photo Shoppe</string>
    <string name="title_activity_navigation">Navigation Activity</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--strings of keys in shared preferences-->
    <string name="shared_preferences">com.irononetech.thephotoschoppe.settings</string>
    <string name="key_registered">registered</string>
    <string name="key_request_sign_up">request_sign_up</string>
    <string name="key_username">username</string>
    <string name="key_password">password</string>
    <string name="key_email">email</string>
    <string name="key_login">login</string>

    <!--database details-->
    <string name="database_location">/data/data/com.example.acer.thephotoschoppe/databases/</string>

    <!-- Strings related to sign up and login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_confirm_password">Confirm password </string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>


    <!--company details-->
    <string name="company_email"><u>photoschoppe@yahoo.com</u></string>
    <string name="company_contact_no"><u>9455812393</u></string>
    <string name="company_address_line_1"><b>9600 Great Hills Trl,</b></string>
    <string name="company_address_line_2"><b>Austin,</b></string>
    <string name="company_address_line_3"><b>TX  78759,</b></string>
    <string name="company_address_line_4"><b>United States.</b></string>


    <!--strings of fragments-->
    <string name="prompt_location">View Location</string>
    <string name="prompt_mobile">Contact :</string>
    <string name="prompt_mail">Email :</string>

    <!--validation strings-->
    <string name="username_required">* Username field required.</string>
    <string name="password_required">* Password field required.</string>
    <string name="conf_password_required">* Confirm password field required.</string>
    <string name="email_required">* Email field required.</string>
    <string name="password_not_match">Password confirmation did not matched.</string>
    <string name="incorrect_username">Invalid username or password.</string>
    <string name="incorrect_password">Invalid password.</string>
    <string name="email_error">Invalid email address.</string>
    <string name="short_password_error">Password must contain at least 8 characters.</string>
    <string name="short_username_error">Username must contain at least 5 characters.</string>
    <string name="symbol_error">Password must contain at least one symbol.</string>
    <string name="uppercase_error">Password must contain at least one uppercase letter.</string>
    <string name="number_error">Password must contain at least one digit.</string>


    <string name="sign_up_first"><b><u>Sign Up First</u></b></string>

    <string name="forget_password"><b><u>Forget Password</u></b></string>

</resources>
