<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.example.acer.thephotoschoppe.activities.SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"

                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="25dp"/>

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="text"
                android:hint="@string/prompt_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_password"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_confirm_password"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:hint="@string/prompt_confirm_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_email"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:onClick="saveSettings"

                android:text="@string/action_register" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
