<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.thephotoschoppe.fragment.MoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:text="Address :"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:text="9600 Great Hills Trl, Austin, TX  78759, United States"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:text="@string/prompt_mobile"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:id="@+id/tv_mobile"
                    android:text="@string/company_contact_no"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:text="@string/prompt_mail"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:id="@+id/tv_email"
                    android:text="@string/company_email"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"


                    android:textSize="20dp"
                    android:text="@string/prompt_location" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/btn_locate"

                    android:background="@android:color/background_light"
                    android:src="@mipmap/ic_locate_me"/>
            </LinearLayout>




        </LinearLayout>
    </ScrollView>

</FrameLayout>
